tests/ui/consts/trait_alias.next_fail.stderr
error[E0277]: the trait bound `T: [const] Baz` is not satisfied
  --> $DIR/trait_alias.rs:24:11
   |
LL |         x.baz();
   |           ^^^
   |
help: consider further restricting type parameter `T` with trait `Baz`
   |
LL | const fn foo<T: [const] Foo + [const] Baz>(x: &T) {
   |                             +++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
